fixes for side nav toggle on smaller screens

--- a/components/login/login.css
+++ b/components/login/login.css
@@ -60,7 +60,7 @@
   padding-left: 10px;
 }
 
-label,
-a {
+.login-page label,
+.login-page a {
   color: var(--violet-color);
 }
